@@ -1,4 +1,11 @@
-restmini 2.x, 2017-06-15
+restmini 1.x, 2017-06-16
+------------------------
+- Removed configurability; because no real need.
+  And not possible to inject config object without breaking constructor's
+  focus on essentials (except by as option; would be real clumsy).
+  Instead users should configure (permanently, that is) by class extension.
+
+restmini 1.x, 2017-06-15
 ------------------------
 - New option correlation_id_header.
 
